--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <!--Ethers-->
   <script src="https://cdn.ethers.io/lib/ethers-5.5.1.umd.min.js" type="application/javascript"></script>
   <!--Wallet Connect-->
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.6.6/dist/umd/index.min.js" type="application/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.0/dist/umd/index.min.js" type="application/javascript"></script>
+
+  <script src="bundle.js"></script>
 
 
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
@@ -68,7 +70,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2780891863';
+    var serviceWorkerVersion = '602240169';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
